<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_register"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <EditText
            android:id="@+id/name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg_input_register"
            android:hint="@string/hint_name"
            android:padding="10dp"
            android:layout_marginBottom="5dp"
            android:singleLine="true"
            android:inputType="textCapWords"
            android:textColor="@color/input_register"
            android:textColorHint="@color/hint_input_register" />

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp">
            <RadioButton
                android:id="@+id/radio_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_male"
                android:onClick="onRadioButtonClicked"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/radio_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_female"
                android:onClick="onRadioButtonClicked"/>
        </RadioGroup>

        <EditText
            android:id="@+id/birthday"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_birthday"
            android:background="@color/bg_input_register"
            android:clickable="true"
            android:singleLine="true"

            android:padding="10dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/input_register"
            android:textColorHint="@color/hint_input_register"/>
            <!--android:onClick="showDatePickerDialog"-->/>

        <Spinner
            android:id="@+id/jobs_spiner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg_input_register"
            android:padding="10dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/input_register"
            android:entries="@array/jobs"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@color/bg_input_register"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_register"
            android:textColorHint="@color/hint_input_register" />

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@color/bg_input_register"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_register"
            android:textColorHint="@color/hint_input_register"/>

        <Spinner
            android:id="@+id/cities_spiner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg_input_register"
            android:padding="10dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/input_register"
            android:entries="@array/cities"/>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/bg_btn_register"
            android:text="@string/btn_register"
            android:textColor="@color/light_dark" />

        <Button
            android:id="@+id/btnLinkToLoginScreen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:text="@string/btn_link_to_login"
            android:textAllCaps="false"
            android:textColor="@color/light_dark"
            android:textSize="15dp" />
    </LinearLayout>

</LinearLayout>